Got one list to print

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
     <section id="main-content">
       <h1>welcome to my cookie stand</h1>
-      
+      <ul id="firstPike">
+        First and Pike
+
+      </ul>
     </section>
     <script src="app.js" type="text/javascript"></script>
   </body>
