--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
   <body>
 
     <section id="main-content">
-      <h1>welcome to my cookie stand</h1>
+      <img src="salmon.png" alt="Picture of a Salmon">
+      <h1>Pat's Salmon Cookies</h1>
+      <div>First and Pike</div>
       <ul id="firstPike">
-        First and Pike
 
+      </ul>
+
+      <div>Seatac</div>
+      <ul id="seatac">
+
+      </ul>
+      <div>Seattle Center</div>
+      <ul id="scenter">
+
+      </ul>
+      <div>Capitol Hill</div>
+      <ul id="caphill">
+
+      </ul>
+
+      <div>Alki</div>
+      <ul id="alki">
+        
       </ul>
     </section>
     <script src="app.js" type="text/javascript"></script>
