--- a/index.html
+++ b/index.html
@@ -10,27 +10,41 @@
     <section id="main-content">
       <img src="salmon.png" alt="Picture of a Salmon">
       <h1>Pat's Salmon Cookies</h1>
+      <p>
+        <img src="pike.jpg" alt="Picture of Pike Place sign">
+      </p>
       <div>First and Pike</div>
       <ul id="firstPike">
 
       </ul>
-
+      <p>
+        <img src="plane.jpg" alt="Plane taking off">
+      </p>
       <div>Seatac</div>
       <ul id="seatac">
 
       </ul>
+
+      <p>
+        <img src="spaceneedle.jpg" alt="picture of Space Needle">
+      </p>
       <div>Seattle Center</div>
       <ul id="scenter">
 
       </ul>
+      <p>
+        <img src="caphill.jpg" alt="picture of cocktail">
+      </p>
       <div>Capitol Hill</div>
       <ul id="caphill">
 
       </ul>
-
+      <p>
+        <img src="alki.jpg" alt="seashells on the beach">
+      </p>
       <div>Alki</div>
       <ul id="alki">
-        
+
       </ul>
     </section>
     <script src="app.js" type="text/javascript"></script>
