--- a/index.html
+++ b/index.html
@@ -6,47 +6,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
-    <section id="main-content">
       <img src="salmon.png" alt="Picture of a Salmon">
       <h1>Pat's Salmon Cookies</h1>
+      <a href="sales.html">Sales Report</a>
       <p>
-        <img src="pike.jpg" alt="Picture of Pike Place sign">
+        Try out Pat's famous salmon cookies! If you've ever wanted to feed your sweet tooth with the breath freshening power of salmon then you've come to the right place!
       </p>
-      <div>First and Pike</div>
-      <ul id="firstPike">
-
-      </ul>
       <p>
-        <img src="plane.jpg" alt="Plane taking off">
+        <img src="cookies.jpg" alt="bowl of cookies">
       </p>
-      <div>Seatac</div>
-      <ul id="seatac">
-
-      </ul>
-
-      <p>
-        <img src="spaceneedle.jpg" alt="picture of Space Needle">
-      </p>
-      <div>Seattle Center</div>
-      <ul id="scenter">
-
-      </ul>
-      <p>
-        <img src="caphill.jpg" alt="picture of cocktail">
-      </p>
-      <div>Capitol Hill</div>
-      <ul id="caphill">
-
-      </ul>
-      <p>
-        <img src="alki.jpg" alt="seashells on the beach">
-      </p>
-      <div>Alki</div>
-      <ul id="alki">
-
-      </ul>
-    </section>
-    <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
