--- a/sales.html
+++ b/sales.html
@@ -16,14 +16,16 @@
       </p>
       <div>First and Pike</div>
       <ul id="firstPike">
-
+        4343 Pike Place Drive
+        Phone: 555-4533
       </ul>
       <p>
         <img src="plane.jpg" alt="Plane taking off">
       </p>
       <div>Seatac</div>
       <ul id="seatac">
-
+        43552 Seatac place
+        Phone: 555-3453
       </ul>
 
       <p>
@@ -31,21 +33,24 @@
       </p>
       <div>Seattle Center</div>
       <ul id="scenter">
-
+        2309 Space Needle RD
+        Phone: 555-0099
       </ul>
       <p>
         <img src="caphill.jpg" alt="picture of cocktail">
       </p>
       <div>Capitol Hill</div>
       <ul id="caphill">
-
+        24335 Capitol Place
+        Phone: 555-5552
       </ul>
       <p>
         <img src="alki.jpg" alt="seashells on the beach">
       </p>
       <div>Alki</div>
       <ul id="alki">
-
+        988 Alki Ave S
+        Phone:867-5309
       </ul>
     </section>
     <script src="app.js" type="text/javascript"></script>
