--- a/sales.html
+++ b/sales.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+<!--
     <section id="main-content">
       <img src="salmon.png" alt="Picture of a Salmon">
       <h1>Pat's Salmon Cookies</h1>
@@ -52,7 +52,7 @@
         988 Alki Ave S
         Phone:867-5309
       </ul>
-    </section>
+    </section> -->
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
