--- a/sales.html
+++ b/sales.html
@@ -2,57 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Sales</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-<!--
-    <section id="main-content">
-      <img src="salmon.png" alt="Picture of a Salmon">
-      <h1>Pat's Salmon Cookies</h1>
-      <a href="index.html">Main</a>
-      <p>
-        <img src="pike.jpg" alt="Picture of Pike Place sign">
-      </p>
-      <div>First and Pike</div>
-      <ul id="firstPike">
-        4343 Pike Place Drive
-        Phone: 555-4533
-      </ul>
-      <p>
-        <img src="plane.jpg" alt="Plane taking off">
-      </p>
-      <div>Seatac</div>
-      <ul id="seatac">
-        43552 Seatac place
-        Phone: 555-3453
-      </ul>
+    <section id = "time"></section>
+    <section id = "stores"></section>
 
-      <p>
-        <img src="spaceneedle.jpg" alt="picture of Space Needle">
-      </p>
-      <div>Seattle Center</div>
-      <ul id="scenter">
-        2309 Space Needle RD
-        Phone: 555-0099
-      </ul>
-      <p>
-        <img src="caphill.jpg" alt="picture of cocktail">
-      </p>
-      <div>Capitol Hill</div>
-      <ul id="caphill">
-        24335 Capitol Place
-        Phone: 555-5552
-      </ul>
-      <p>
-        <img src="alki.jpg" alt="seashells on the beach">
-      </p>
-      <div>Alki</div>
-      <ul id="alki">
-        988 Alki Ave S
-        Phone:867-5309
-      </ul>
-    </section> -->
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
