--- a/sales.html
+++ b/sales.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <img src="salmon.png" alt="Picture of a Salmon">
+    <h1>Pat's Salmon Cookies</h1>
+    <a href="index.html">Main</a>
+    <p></p>
     <section id = "stores"></section>
 
     <script src="app.js" type="text/javascript"></script>
