--- a/sales.html
+++ b/sales.html
@@ -11,6 +11,20 @@
     <a href="index.html">Main</a>
     <p></p>
     <section id = "stores"></section>
+    <form id="cookie-store-form">
+      <fieldset>
+        <legend>Enter New Cookie Store Info</legend>
+        <label for="cookieStoreName">Cookie Store Name:</label>
+        <input type="text" name="cookieStoreName">
+        <label for="minCust">Minimum Customers/Hour:</label>
+        <input type="text" name="minCust">
+        <label for="maxCust">Maximum Customers/Hour:</label>
+        <input type="text" name="maxCust">
+        <label for="avgCookies">Average Cookies/Customer</label>
+        <input type="text" name="avgCookies">
+        <button type="submit" name="button">SUBMIT</button>
+      </fieldset>
+    </form>
 
     <script src="app.js" type="text/javascript"></script>
   </body>
