added article elements to index page with pictures

--- a/index.html
+++ b/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="navbar">
-      <ul>
-        <li><a href="index.html">Main</a></li>
-        <li><a href="sales.html">Sales Report</a></li>
-        <li><a href="index.html">About Us</a></li>
-        <li><a href="index.html">Merchandise</a></li>
-        <li><a href="index.html">Salmon Events</a></li>
-      </ul>
-    </div>
+  <html>
+    <head>
+      <meta charset="utf-8">
+      <title></title>
+      <link rel="stylesheet" href="normalize.css">
+      <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+      <div class="navbar">
+        <ul>
+          <li><a href="index.html">Main</a></li>
+          <li><a href="sales.html">Sales Report</a></li>
+          <li><a href="index.html">Contact Us</a></li>
+          <li><a href="index.html">Merchandise</a></li>
+          <li><a href="index.html">Salmon Events</a></li>
+        </ul>
+      </div>
 
-      <h1>Pat's Salmon Cookies</h1>
+        <div class="salmonpic"><h1>Pat's Salmon Cookies</h1></div>
+        <div class="main">
 
-      <p>
+          <div class="about">
+            <p>
+              Try out Pat's famous salmon cookies! If you've ever wanted to feed your sweet tooth with the breath freshening power of salmon then you've come to the right place!
+            </p>
+          </div>
+          <div class="article">
+            <p>
+              Try out Pat's famous salmon cookies! If you've ever wanted to feed your sweet tooth with the breath freshening power of salmon then you've come to the right place!
+            </p>
+          </div>
+          <div class="articletwo">
+            <p>
+              Try out Pat's famous salmon cookies! If you've ever wanted to feed your sweet tooth with the breath freshening power of salmon then you've come to the right place!
+            </p>
+          </div>
+        </div>
 
-        Try out Pat's famous salmon cookies! If you've ever wanted to feed your sweet tooth with the breath freshening power of salmon then you've come to the right place!
-      </p>
-      <p>
-        <img src="salmon.png" alt="Picture of a Salmon">
-        <img src="cookies.jpg" alt="bowl of cookies">
-      </p>
-  </body>
-</html>
+
+    </body>
+  </html>
