started css on sales page

--- a/index.html
+++ b/index.html
@@ -21,18 +21,21 @@
         <div class="main">
 
           <div class="about">
+            <h2>Seattle Original</h2>
             <p>
-              Try out Pat's famous salmon cookies! If you've ever wanted to feed your sweet tooth with the breath freshening power of salmon then you've come to the right place!
+              Try out Pat's famous Salmon Cookies! Pat has combined two of the Northwest's favorite past times. Cookies and Salmon! Salmon Cookies is growing fast with new locations popping up everywhere. Get there early to beat the dozens of people who line up daily.
             </p>
           </div>
           <div class="article">
+            <h2>Unique Product</h2>
             <p>
-              Try out Pat's famous salmon cookies! If you've ever wanted to feed your sweet tooth with the breath freshening power of salmon then you've come to the right place!
+              When Pat started Salmon Cookies people said "Fish cookies? You cray Pat" and "Dude...why?" But Pat had a vision. A dream. And that dream was to combine the breath freshening power of salmon and the sweet confectioner goodness of cookes.
             </p>
           </div>
           <div class="articletwo">
+            <h2>Made Fresh Daily</h2>
             <p>
-              Try out Pat's famous salmon cookies! If you've ever wanted to feed your sweet tooth with the breath freshening power of salmon then you've come to the right place!
+              Salmon Cookies are always baked fresh daily from locally sourced Northwest Salmon. The Salmon swim far and wide and right into our blenders. It's like you can taste their struggle in every bite.
             </p>
           </div>
         </div>
