--- a/sales.html
+++ b/sales.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
     <meta charset="utf-8">
-    <title>Sales</title>
+    <title></title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <img src="salmon.png" alt="Picture of a Salmon">
-    <h1>Pat's Salmon Cookies</h1>
-    <a href="index.html">Main</a>
-    <p></p>
+    <div class="navbar">
+      <ul>
+        <li><a href="index.html">Main</a></li>
+        <li><a href="sales.html">Sales Report</a></li>
+        <li><a href="index.html">Contact Us</a></li>
+        <li><a href="index.html">Merchandise</a></li>
+        <li><a href="index.html">Salmon Events</a></li>
+      </ul>
+    </div>
+
+      <div class="salmonpic"><h1>Pat's Salmon Cookies</h1></div>
+      <div class="main">
     <section id = "stores"></section>
 
     <p></p>
