added address for locations to sales page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
       <div class="navbar">
-        <ul>
+        <ul id="menu">
           <li><a href="index.html">Main</a></li>
           <li><a href="sales.html">Sales Report</a></li>
           <li><a href="index.html">Contact Us</a></li>
@@ -18,7 +18,7 @@
       </div>
 
         <div class="salmonpic"><h1>Pat's Salmon Cookies</h1></div>
-        <div class="main">
+        <div class="mainpage">
 
           <div class="about">
             <h2>Seattle Original</h2>
