adding locations to front page, fixing css for index and sales pages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
+      <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
       <meta charset="utf-8">
       <title></title>
       <link rel="stylesheet" href="normalize.css">
@@ -29,7 +30,7 @@
           <div class="article">
             <h2>Unique Product</h2>
             <p>
-              When Pat started Salmon Cookies people said "Fish cookies? You cray Pat" and "Dude...why?" But Pat had a vision. A dream. And that dream was to combine the breath freshening power of salmon and the sweet confectioner goodness of cookes.
+              When Pat started Salmon Cookies people said "Fish cookies? You cray Pat" and "Dude...why?" But Pat had a vision. A dream. And that dream was to combine the breath freshening power of salmon and the sweet confectioner goodness of cookies.
             </p>
           </div>
           <div class="articletwo">
@@ -39,7 +40,17 @@
             </p>
           </div>
         </div>
+        <div class="space"></div>
+        <div class="location">
 
+        </div>
+        <div class="stores">
+          <div class="firstAndPike"></div>
+          <div class="seatac"></div>
+          <div class="seattlecenter"></div>
+          <div class="capitolhill"></div>
+          <div class="alki"></div>
 
+          </div>
     </body>
   </html>
