finished adding locations to front page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
       <meta charset="utf-8">
       <title></title>
       <link rel="stylesheet" href="normalize.css">
@@ -45,11 +46,41 @@
 
         </div>
         <div class="stores">
-          <div class="firstAndPike"></div>
-          <div class="seatac"></div>
-          <div class="seattlecenter"></div>
-          <div class="capitolhill"></div>
-          <div class="alki"></div>
+          <div class="firstAndPike">
+            <ul>
+              <li><strong>1st and Pike</strong></li>
+              <li>4343 Pike Place Drive</li>
+              <li>Phone: 555-4533</li>
+            </ul>
+          </div>
+          <div class="seatac">
+            <ul>
+              <li><strong>Seatac Airport</strong></li>
+              <li>43552 Seatac place</li>
+              <li>Phone: 555-3453</li>
+            </ul>
+          </div>
+          <div class="seattlecenter">
+            <ul>
+              <li><strong>Seattle Center</strong></li>
+              <li>12 Space Needle RD</li>
+              <li>Phone: 555-0099</li>
+            </ul>
+          </div>
+          <div class="capitolhill">
+            <ul>
+              <li><strong>Capitol Hill</strong></li>
+              <li>24335 Capitol Place</li>
+              <li>Phone: 555-5552</li>
+            </ul>
+          </div>
+          <div class="alki">
+            <ul>
+              <li><strong>Alki</strong></li>
+              <li>988 Alki Ave S</li>
+              <li>Phone:867-5309</li>
+            </ul>
+          </div>
 
           </div>
     </body>
