added title to locations section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           </div>
         </div>
         <div class="space"></div>
+        <div class="storehead"><h1 id="currentstores">Current Locations</h1></div>
         <div class="location">
 
         </div>
